# WUT_RemoteBoombox

./: CMakeLists.txt  app.cpp  app.h  apploader.cpp  apploader.h  apploaderui.cpp  apploaderui.h  apploaderui.ui  audiosource.cpp  clientapp.cpp  clientapp.h  clientwindow.cpp  clientwindow.h  clientwindow.ui  communicationmodule.cpp  communicationmodule.h  config.h  main.cpp  serverapp.cpp  serverapp.h  serverwindow.cpp  serverwindow.h  serverwindow.ui  soundcollector.cpp  soundcollector.h  visualization.cpp  visualization.h  visualizationcolor.cpp  visualizationcolor.h  visualizationspectogram.cpp  visualizationvolumebar.cpp  visualizationvolumebar.h
fftw/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
src/: main.cpp
src/client/: clientapp.cpp  clientapp.h  clientwindow.cpp  clientwindow.h  clientwindow.ui  visualization.cpp  visualization.h  visualizationcolor.cpp  visualizationfreqspectrumplot.cpp  visualizationfreqspectrumplot.h  visualizationspectogram.cpp  visualizationspectogram.h  visualizationvolumebar.cpp  visualizationvolumebar.h
src/common/: app.cpp  app.h  communicationmodule.cpp  communicationmodule.h
src/server/: serverapp.cpp  serverapp.h  serverwindow.cpp  serverwindow.h  serverwindow.ui  soundcollector.cpp  soundcollector.h
